Bug 294223 - The first slide in a Stage presentation is called "page1" not "Slide 1"
Summary: The first slide in a Stage presentation is called "page1" not "Slide 1"
Status: RESOLVED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4-snapshots
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: T Zachmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-16 10:50 UTC by Rodney Gedda
Modified: 2012-04-05 04:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rodney Gedda 2012-02-16 10:50:07 UTC
Version:           2.4-snapshots (using KDE 4.8.0) 
OS:                Linux

The title says it all really.

The first page of a Stage document is called "page1". Add a slide and it's...

Slide 2
Slide 3
Slide 4
Slide 5
etc...etc...

Perhaps "page1" should be renamed to "Slide 1"?



Reproducible: Always

Steps to Reproduce:
Just add a slide to a Stage file and then view them in the Slides Sorter.


Expected Results:  
Slide 1 not page1
Comment 1 T Zachmann 2012-03-25 05:32:22 UTC
Git commit 4deb1cab33459e7353abb68ccb01dd0b56f4754c by Thorsten Zachmann.
Committed on 25/03/2012 at 07:29.
Pushed by zachmann into branch 'master'.

Don't show pageX as nam of the page

in case pageX is used for saving remove that on loading. This name is used
on saving if e.g. no name for the page was set. This fixes the problem that
after save/load of a document all slides/pages are named pageX.

CCMAIL: calligra-devel@kde.org

Please review so I can backport to 2.4

M  +5    -0    libs/kopageapp/KoPADocument.cpp

http://commits.kde.org/calligra/4deb1cab33459e7353abb68ccb01dd0b56f4754c
Comment 2 T Zachmann 2012-04-05 04:11:22 UTC
Git commit 1985668ef0bd530191f156a5304dcf9ffbcb35b2 by Thorsten Zachmann.
Committed on 25/03/2012 at 07:29.
Pushed by zachmann into branch 'calligra/2.4'.

Don't show pageX as nam of the page

in case pageX is used for saving remove that on loading. This name is used
on saving if e.g. no name for the page was set. This fixes the problem that
after save/load of a document all slides/pages are named pageX.

Reviewed by: boemann
(cherry picked from commit 4deb1cab33459e7353abb68ccb01dd0b56f4754c)

M  +5    -0    libs/kopageapp/KoPADocument.cpp

http://commits.kde.org/calligra/1985668ef0bd530191f156a5304dcf9ffbcb35b2